--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hamburger-menu": "^1.2.1",
-    "react-transition-group": "^4.4.5",
+    "sharp": "^0.31.2",
     "terminal.css": "^0.7.2"
   }
 }
